# Weight_of_Reasoning

./: .env.example  .gitignore  PHASE5_AUDIT.md  PHASE5_RESULTS_EXPLAINED.md  PREREG.md  PROJECT_SUMMARY.md  README.md  README_SMOLLM.md  RUNPOD_INSTRUCTIONS.md  pyproject.toml
configs/: eval.phase4.yaml
configs/models/: pythia-410m.yaml  pythia-70m.yaml
configs/smollm/: eval.debug.yaml  eval.default.yaml
data/mini/: control.jsonl  reasoning.jsonl
experiments/: iteration_registry.csv
experiments/iteration_002/: notes.md
experiments/iteration_003/: notes.md
logs/: run_phase5_20251021_162154.txt  run_phase5_20251021_171916.txt  run_phase5_20251021_184645.txt  run_phase5_20251022_001708.txt  run_phase5_20251022_022756.txt  run_phase5_robustness_20251021_161824.txt  run_phase5_robustness_20251021_181013.txt  run_phase5_robustness_20251021_185042.txt  run_phase5_robustness_20251022_033200.txt
notebooks/: analysis_phase5.ipynb
reports/: hw_phase4b.json  metrics.csv  metrics_phase2.csv  summary.json  summary_phase3.json
reports/phase4/: pythia-410m_partial_corr.json  pythia-410m_summary.json  pythia-70m_metrics.csv  (+2 more)
scripts/: 01_download_data.py  02_tiny_eval.sh  03_phase3_eval.sh  04_phase4_scale.sh  05_phase4b_patchout.sh  06_phase5_robustness.sh  07_deepseek_sanity.py  08_runpod_deepseek_sanity.sh  log_run.sh  runpod_setup_and_run.sh  validate_phase5.sh
tests/: __init__.py  test_apl_metric.py  test_baselines.py  test_cud_sib_fl_rev.py  test_forward_min.py  test_imports.py  test_induction.py  test_phase4_scaling_patchout.py  test_phase4b_patchout.py
(+146 files in other folders)
